force-app/main/default/objects/Leave__c/Leave__c.object-meta.xml
<CustomObject>
    <label>Leave Request</label>
    <nameField>
        <displayFormat>LR-{00000},</displayFormat>
        <label>Leave Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>