force-app/main/default/objects/Leave__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Leave Requests (Approver)</relationshipLabel>
    <relationshipName>Leave_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>