force-app/main/default/objects/Leave__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Leave Type</label>
    <referenceTo>Leave_Type__c</referenceTo>
    <relationshipLabel>Leave Requests</relationshipLabel>
    <relationshipName>Leave_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>